--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.4.2",
