--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "pouchdb-adapter-asyncstorage": "^6.4.0",
+    "pouchdb-react-native": "^6.4.0",
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.31.3",
